Track parse time blocked on script in xml documents.

This adds the existing equivalent logic from HTMLDocumentParser to
XMLDocumentParser.

BUG=632343

Review-Url: https://codereview.chromium.org/2235733004
Cr-Commit-Position: refs/heads/master@{#411745}